--- a/app/src/main/res/layout/view_bottom_sheet.xml
+++ b/app/src/main/res/layout/view_bottom_sheet.xml
@@ -40,4 +40,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnBottomSheet" />
 
+    <Button
+        android:id="@+id/btnAllTrainings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
