--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -9,7 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="adasdasd"
+        android:text="@string/start_time"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/tvDateEnd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="@string/end_time"
+        app:layout_constraintTop_toBottomOf="@+id/tvDate"/>
+
+    <TextView
+        android:id="@+id/tvDistance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="@string/distance"
+        app:layout_constraintTop_toBottomOf="@+id/tvDateEnd"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
